fix for pivot table overflow

--- a/superset/assets/stylesheets/superset.css
+++ b/superset/assets/stylesheets/superset.css
@@ -181,7 +181,7 @@ div.widget .chart-header a {
 }
 
 div.widget .slice_container {
-  overflow: hidden;
+  overflow: auto;
 }
 
 .navbar .alert {
